# msu2-ip-display

./: .gitignore  DEVELOPER.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-2-report.md  task-4-report.md  task-8-report.md  task-9-report.md
docs/: README.md  flasher-notes.md  host-usb-ip-display-draft.md  msu2-protocol-and-flash-layout.md  release-and-install.md
flasher/: README.md  index.html  package-lock.json  package.json
flasher/src/: main.ts  styles.css
flasher/src-tauri/: Cargo.toml  tauri.conf.json
flasher/src-tauri/assets/: dhcp_failed.rgb565be  flash_status_done.rgb565be  flash_status_percent_000.rgb565be  flash_status_percent_025.rgb565be  flash_status_percent_050.rgb565be  flash_status_percent_075.rgb565be  flash_status_percent_100.rgb565be  flash_status_percent_strip.rgb565be  flash_status_progress_frame.rgb565be  flash_status_screen_done.rgb565be  flash_status_screen_initial.rgb565be  flash_status_title.rgb565be  mlogo_160x68.mono  offline_animation.rgb565be  waiting_to_flash.rgb565be
flasher/src-tauri/src/: app_state.rs  assets.rs  commands.rs  device.rs  errors.rs  flasher.rs  lib.rs  protocol.rs  screen_status.rs  session.rs
flasher/src-tauri/tests/: hardware_screen_status.rs
flasher/tools/: generate_flash_assets.py  generate_offline_animation.py
host-usb/: Cargo.toml  README.md
references/: README.md
scripts/: install-miniboard-ipd.sh  test-install-miniboard-ipd.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
(+45 files in other folders)
