[package]
name = "msu2-flasher"
version = "0.1.6"
description = "Desktop flasher for fixed MSU2 screen assets"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "msu2_flasher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.9.0"
thiserror = "2.0.18"
