[package]
name = "msu2-flasher"
version = "0.1.11"
description = "Desktop flasher for fixed MSU2 screen assets"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "msu2_flasher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
# Without it the webview loads `devUrl` (http://localhost:1420) at runtime instead of the bundled assets.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.9.0"
thiserror = "2.0.18"
